[tool.poetry]
name = "map-machine"
version = "0.1.0"
description = ""
authors = ["Shengy <shengy90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cairosvg = ">=2.5.0"
colour = ">=0.1.5"
numpy = ">=1.18.1"
pillow = ">=8.2.0"
portolan = ">=1.0.1"
pycairo = ">=1.20.1"
pytest = ">=6.2.2"
pyyaml = ">=4.2b1"
setuptools = ">=51.0.0"
shapely = ">=1.7.1"
svgwrite = ">=1.4"
urllib3 = ">=1.25.6,<2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
